// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Charge AfterContent should aggregate line_items by subscriptions 1`] = `
<div>
  <div>
    <div
      class="fieldContainer staticField"
    >
      <span
        class="fieldValue"
      >
        <span
          aria-label="subscription emoji"
          role="img"
        >
          🔄
        </span>
         
        Subscription #
        1
      </span>
    </div>
    <div
      class="fieldContainer staticField"
    >
      <span
        class="fieldValue"
      >
        foo
         (
        7
        )
      </span>
    </div>
    <div
      class="fieldContainer staticField"
    >
      <span
        class="fieldValue"
      >
        bar
         (
        5
        )
      </span>
    </div>
  </div>
  <div>
    <div
      class="fieldContainer staticField"
    >
      <span
        class="fieldValue"
      >
        <span
          aria-label="subscription emoji"
          role="img"
        >
          🔄
        </span>
         
        Subscription #
        2
      </span>
    </div>
    <div
      class="fieldContainer staticField"
    >
      <span
        class="fieldValue"
      >
        baz
         (
        1
        )
      </span>
    </div>
  </div>
</div>
`;

exports[`Charge AfterTitle should display the refund action when the status is SUCCESS or PARTIALLY_REFUNDED 1`] = `
<div>
  <div
    class="container"
  >
    <button
      aria-disabled="false"
      class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-secondary-a432 ui-button-haslefticon-a432"
      data-name="button"
      data-rac=""
      data-react-aria-pressable="true"
      id="action-button-3"
      tabindex="0"
      type="button"
    >
      <div
        class="ui-button-surface-a432"
      >
        <span
          class="ui-button-content-a432"
        >
          <div
            class="ui-buttonslot-icon-504b ui-buttonslot-md-504b ui-buttonslot-leading-504b"
          >
            <i
              aria-hidden="true"
              class="material-icons"
            >
              attach_money
            </i>
          </div>
          <span
            class="typography-bold-md ui-text-text-d239"
            data-name="text"
            style="text-align: left; text-wrap: nowrap;"
          >
            <strong>
              <span
                id="action-button-3-tooltip-target"
              />
              Refund
            </strong>
          </span>
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Charge AfterTitle should display the refund action when the status is SUCCESS or PARTIALLY_REFUNDED 2`] = `
<div>
  <div
    class="container"
  >
    <button
      aria-disabled="false"
      class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-secondary-a432 ui-button-haslefticon-a432"
      data-name="button"
      data-rac=""
      data-react-aria-pressable="true"
      id="action-button-4"
      tabindex="0"
      type="button"
    >
      <div
        class="ui-button-surface-a432"
      >
        <span
          class="ui-button-content-a432"
        >
          <div
            class="ui-buttonslot-icon-504b ui-buttonslot-md-504b ui-buttonslot-leading-504b"
          >
            <i
              aria-hidden="true"
              class="material-icons"
            >
              attach_money
            </i>
          </div>
          <span
            class="typography-bold-md ui-text-text-d239"
            data-name="text"
            style="text-align: left; text-wrap: nowrap;"
          >
            <strong>
              <span
                id="action-button-4-tooltip-target"
              />
              Refund
            </strong>
          </span>
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Charge AfterTitle should handle correctly if total_price or total_refunds is not set 1`] = `
<div>
  <div
    class="container"
  >
    <button
      aria-disabled="false"
      class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-secondary-a432 ui-button-haslefticon-a432"
      data-name="button"
      data-rac=""
      data-react-aria-pressable="true"
      id="action-button-5"
      tabindex="0"
      type="button"
    >
      <div
        class="ui-button-surface-a432"
      >
        <span
          class="ui-button-content-a432"
        >
          <div
            class="ui-buttonslot-icon-504b ui-buttonslot-md-504b ui-buttonslot-leading-504b"
          >
            <i
              aria-hidden="true"
              class="material-icons"
            >
              attach_money
            </i>
          </div>
          <span
            class="typography-bold-md ui-text-text-d239"
            data-name="text"
            style="text-align: left; text-wrap: nowrap;"
          >
            <strong>
              <span
                id="action-button-5-tooltip-target"
              />
              Refund
            </strong>
          </span>
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Charge AfterTitle should handle correctly if total_price or total_refunds is not set 2`] = `
<div>
  <div
    class="container"
  >
    <button
      aria-disabled="false"
      class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-secondary-a432 ui-button-haslefticon-a432"
      data-name="button"
      data-rac=""
      data-react-aria-pressable="true"
      id="action-button-6"
      tabindex="0"
      type="button"
    >
      <div
        class="ui-button-surface-a432"
      >
        <span
          class="ui-button-content-a432"
        >
          <div
            class="ui-buttonslot-icon-504b ui-buttonslot-md-504b ui-buttonslot-leading-504b"
          >
            <i
              aria-hidden="true"
              class="material-icons"
            >
              attach_money
            </i>
          </div>
          <span
            class="typography-bold-md ui-text-text-d239"
            data-name="text"
            style="text-align: left; text-wrap: nowrap;"
          >
            <strong>
              <span
                id="action-button-6-tooltip-target"
              />
              Refund
            </strong>
          </span>
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Charge AfterTitle should not display the refund action when the status is not SUCCESS or PARTIALLY_REFUNDED 1`] = `<div />`;

exports[`Charge AfterTitle should return null if we are in edition mode, or if there is no integrationId 1`] = `<div />`;

exports[`Charge AfterTitle should return null if we are in edition mode, or if there is no integrationId 2`] = `<div />`;

exports[`Charge BeforeContent should display default color if there's no matching status 1`] = `
<div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldLabel"
    >
      Status
      : 
    </span>
    <span
      class="fieldValue"
    >
      <div
        class="ui-badge-badge-0cf8 ui-badge-uppercase-0cf8"
        data-color="default"
        data-corner="round"
        data-name="badge"
      >
        Foobar
      </div>
    </span>
  </div>
</div>
`;

exports[`Charge BeforeContent should display the appropriate color if there's a matching status 1`] = `
<div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldLabel"
    >
      Status
      : 
    </span>
    <span
      class="fieldValue"
    >
      <div
        class="ui-badge-badge-0cf8 ui-badge-uppercase-0cf8"
        data-color="red"
        data-corner="round"
        data-name="badge"
        data-type="error"
      >
        Error
      </div>
    </span>
  </div>
</div>
`;

exports[`Charge SubscriptionAfterTitle should display the skipCharge action if the charge is queued 1`] = `
<div>
  <div
    class="container"
  >
    <button
      aria-disabled="false"
      class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-secondary-a432 ui-button-haslefticon-a432"
      data-name="button"
      data-rac=""
      data-react-aria-pressable="true"
      id="action-button-1"
      tabindex="0"
      type="button"
    >
      <div
        class="ui-button-surface-a432"
      >
        <span
          class="ui-button-content-a432"
        >
          <div
            class="ui-buttonslot-icon-504b ui-buttonslot-md-504b ui-buttonslot-leading-504b"
          >
            <i
              aria-hidden="true"
              class="material-icons"
            >
              block
            </i>
          </div>
          <span
            class="typography-bold-md ui-text-text-d239"
            data-name="text"
            style="text-align: left; text-wrap: nowrap;"
          >
            <strong>
              <span
                id="action-button-1-tooltip-target"
              />
              Skip
            </strong>
          </span>
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Charge SubscriptionAfterTitle should display the unskipCharge action if the charge is skipped 1`] = `
<div>
  <div
    class="container"
  >
    <button
      aria-disabled="false"
      class="ui-button-wrapper-a432 ui-button-md-a432 ui-button-secondary-a432 ui-button-haslefticon-a432"
      data-name="button"
      data-rac=""
      data-react-aria-pressable="true"
      id="action-button-2"
      tabindex="0"
      type="button"
    >
      <div
        class="ui-button-surface-a432"
      >
        <span
          class="ui-button-content-a432"
        >
          <div
            class="ui-buttonslot-icon-504b ui-buttonslot-md-504b ui-buttonslot-leading-504b"
          >
            <i
              aria-hidden="true"
              class="material-icons"
            >
              autorenew
            </i>
          </div>
          <span
            class="typography-bold-md ui-text-text-d239"
            data-name="text"
            style="text-align: left; text-wrap: nowrap;"
          >
            <strong>
              <span
                id="action-button-2-tooltip-target"
              />
              Unskip
            </strong>
          </span>
        </span>
      </div>
    </button>
  </div>
</div>
`;

exports[`Charge SubscriptionAfterTitle should not display any action if the charge is nor queued nor skipped 1`] = `<div />`;

exports[`Charge SubscriptionAfterTitle should return null if isEditing 1`] = `<div />`;

exports[`Charge SubscriptionAfterTitle should return null if there's no integrationId 1`] = `<div />`;

exports[`Charge TitleWrapper customer context should not render any link because no custom link is set 1`] = `
<div>
  <a
    rel="noopener noreferrer"
    target="_blank"
  />
</div>
`;

exports[`Charge TitleWrapper customer context should render custom link because it is set 1`] = `
<div>
  <a
    href="https://gorgias.io/asd1as2d3/"
    rel="noopener noreferrer"
    target="_blank"
  />
</div>
`;

exports[`Charge TitleWrapper should not render any link because no customer hash is available 1`] = `
<div>
  <a
    rel="noopener noreferrer"
    target="_blank"
  />
</div>
`;

exports[`Charge TitleWrapper should not render any provided link when no customer hash is available 1`] = `
<div>
  <a
    rel="noopener noreferrer"
    target="_blank"
  />
</div>
`;

exports[`Charge TitleWrapper ticket context should not render any link because no custom link is set 1`] = `
<div>
  <a
    rel="noopener noreferrer"
    target="_blank"
  />
</div>
`;

exports[`Charge TitleWrapper ticket context should render custom link because it is set 1`] = `
<div>
  <a
    href="https://gorgias.io/asd1as2d3/"
    rel="noopener noreferrer"
    target="_blank"
  />
</div>
`;
